fix: NPE in error messages [DHIS2-15276]